# esphome-kpis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  collect.yml
data/: components.html  components.json
esphome_kpis/: collect.py  github.py  render.py  repo.py
tests/: test_github.py  test_repo.py
